# fastlog

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
fastlog/: bandit.py  benchmark.py  benchmark_extended.py  benchmark_sizes.py  benchmark_suite.py  cli.py  core.py  dcf_adapter.py  format.py  uploader.py  warp_adapter.py  warphybrid.c  warphybrid.h
tests/: test_fastlog.py
